<resources>
    <string name="app_name">De4LRoadTracker</string>
    <string name="action_exit">stop</string>
    <string name="service_connected">Sensor Tracker running</string>
    <string name="start_service">start Service</string>
    <string name="stop_service">stop Service</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">about Privacy</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_share_gpx">Share GPX</string>
    <string name="menu_send">send data</string>
    <string name="title_activity_settings">Settings</string>
    <string name="share_gpx_with">Share GPX with...</string>

    <!-- Preference Titles -->
    <string name="messages_header">Message Broker</string>
    <string name="sync_header">Sync</string>
    <string name="debug_header">Debugging</string>
    <string name="privacy_settings">Privacy Settings</string>

    <!-- Messages Broker Preferences -->
    <string name="mqtt_url">MQTT Server</string>
    <string name="mqtt_topic">MQTT Sensor Topic</string>

    <!-- Debug Settings -->
    <string name="debug_sound">play sound on location changes</string>
    <string name="keep_on_device">keep cached data on device</string>
    <string name="location_service_url">Debug Location Server</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync tracked data periodically</string>
    <string name="power_save">enable power save settings</string>
    <string name="title_activity_debug">Tracker Events</string>
    <!-- Privacy Preferences -->
    <string name="speed_limit_kmh">Tracking speed limit (km/h)</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings used for privacy agreement -->
    <string name="agree">I agree</string>

    <string name="thank_you">thank you for supporting the <a href="https://de4l.io">DE4L</a> research project, aimed
    at building a data corpus of german street and bike-lanes, which will support solutions
        for more cyclist friendly traffic infrastructure in cities.
    </string>
    <string name="privacy_hint">Regarding your privacy see our <a href="https://t-i-m-m-i.github.io/privacy-de4l.html">privacy agreement</a>. </string>i
    <string name="distance">tracked length</string>
    <string name="waypoint">Waypoint</string>
    <string name="waypoints">Waypoints</string>
    <string name="contribution">published Contribution</string>
    <string name="you_contributed">your contribution:</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_privacy_agreement">PrivacyAgreementActivity</string>
    <string name="close">close</string>
    <string name="cancel">cancel</string>
    <string name="proceed">proceed</string>
    <string name="password">password</string>
    <string name="passwordAlert">please enter the password for the message publishing</string>

    <string name="locationUsageAlertMessage">This app collects location data to assign sensor data to
        a given point in space-time even when the app is closed or not in use, as long as you are in record mode.
        Without the exact location, the measurements would be just random noise, unsuitable for this research project. </string>
</resources>