<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="mqttUrl"
            app:title="@string/mqtt_url"
            app:defaultValue="172.16.111.22:1883"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="locationServiceUrl"
            app:title="@string/location_service_url"
            app:defaultValue="172.16.111.22:9001/location"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:key="powersave"
            app:title="@string/power_save" />


    </PreferenceCategory>

</PreferenceScreen>