<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_toggle"
        android:icon="@drawable/baseline_not_started_black_48"
        android:onClick="toggleService"
        app:showAsAction="ifRoom"
        android:title="@string/start_service" />

    <item
        android:icon="@drawable/ic_settings_white_48dp"
        android:onClick="showSettings"
        app:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:icon="@drawable/ic_settings_white_48dp"
        android:onClick="showPrivacyAgreement"
        app:showAsAction="never"
        android:title="@string/menu_privacy"/>
    <item
        android:onClick="filterAndPublish"
        app:showAsAction="never"
        android:title="@string/menu_send"/>
    <item
        android:onClick="startMqttTestActivity"
        app:showAsAction="never"
        android:title="@string/menu_debug"/>

</menu>